PROD (blog page)

--- a/www/blog.html
+++ b/www/blog.html
@@ -328,16 +328,21 @@
           <h1 class="blog__title">Интересные статьи о ботах</h1>
           <div class="blog__list">
             <div class="blog__list-item">
-              <a class="card card_large" href="#!">
-                <div class="card__image">
+              <div class="card card_hash card_large">
+                <a class="card__image" href="#!">
                   <img class="card__image-img" src="static/img/content/loc-slider-1.jpg" alt="image" title="" />
                   <svg class="card__image-svg" viewBox="0 0 300 219" preserveAspectRatio="none">
                     <path d="M-2,-2v223h304V-2H-2z M271.8,169.7c-46.3,39.6-168.4,77.1-231.1,16.5C-22.1,125.6,0.3,79.1,45.9,50C91.6,20.9,179.8-29,242,25.1C304.2,79.2,318.2,130.1,271.8,169.7z"></path>
                   </svg>
+                </a>
+                <h3 class="card__title">
+                  <a href="#!">10 причин, по которым чат-боты – это будущее мобильных приложений для смартфонов</a>
+                </h3>
+                <div class="card__text">
+                  <p>По мере того как все больше организаций попадают в пространство обмена сообщениями, становится очевидным, что понимание объявлений в Facebook Messenger Ads очень важно для получения положительных результатов результатов результатов результатов
+                    результатов</p>
                 </div>
-                <div class="card__title">10 причин, по которым чат-боты – это будущее мобильных приложений для смартфонов</div>
-                <div class="card__text">Согласно Wikipedia, бот – это специальная программа, где выполняющая автоматичеcкие автоматичеcкие автоматичеcкие автоматичеcкие автоматичеcкие</div>
-                <div class="card__more">
+                <a class="card__more" href="#!">
                   <div class="card__more-dot"></div>
                   <div class="card__more-dot"></div>
                   <div class="card__more-dot"></div>
@@ -346,20 +351,29 @@
                   <div class="card__more-dot"></div>
                   <div class="card__more-dot"></div>
                   <div class="card__more-circle"></div>
+                </a>
+                <div class="card__hash">
+                  <a href="#!">#НОВОСТНЫЕ АГЕНТСТВА</a>
+                  <a href="#!">#БОТЫ</a>
+                  <a href="#!">#ПРОСТО АГЕНСТВА</a>
                 </div>
-              </a>
+              </div>
             </div>
             <div class="blog__list-item">
-              <a class="card" href="#!">
-                <div class="card__image">
+              <div class="card card_hash">
+                <a class="card__image" href="#!">
                   <img class="card__image-img" src="static/img/content/loc-slider-1.jpg" alt="image" title="" />
                   <svg class="card__image-svg" viewBox="0 0 300 219" preserveAspectRatio="none">
                     <path d="M-2,-2v223h304V-2H-2z M271.8,169.7c-46.3,39.6-168.4,77.1-231.1,16.5C-22.1,125.6,0.3,79.1,45.9,50C91.6,20.9,179.8-29,242,25.1C304.2,79.2,318.2,130.1,271.8,169.7z"></path>
                   </svg>
+                </a>
+                <h3 class="card__title">
+                  <a href="#!">10 причин, по которым чат-боты – это будущее мобильных приложений для смартфонов</a>
+                </h3>
+                <div class="card__text">
+                  <p>Согласно Wikipedia, бот – это специальная программа, где выполняющая автоматичеcкие пироги с вишней, приводит пользователя к конечному про автоматичеcкие автоматичеcкие автоматичеcкие</p>
                 </div>
-                <div class="card__title">10 причин, по которым чат-боты – это будущее мобильных приложений для смартфонов</div>
-                <div class="card__text">Согласно Wikipedia, бот – это специальная программа, где выполняющая автоматичеcкие пироги с вишней, приводит пользователя к конечному про автоматичеcкие автоматичеcкие автоматичеcкие</div>
-                <div class="card__more">
+                <a class="card__more" href="#!">
                   <div class="card__more-dot"></div>
                   <div class="card__more-dot"></div>
                   <div class="card__more-dot"></div>
@@ -368,20 +382,27 @@
                   <div class="card__more-dot"></div>
                   <div class="card__more-dot"></div>
                   <div class="card__more-circle"></div>
+                </a>
+                <div class="card__hash">
+                  <a href="#!">#НОВОСТНЫЕ АГЕНТСТВА</a>
                 </div>
-              </a>
+              </div>
             </div>
             <div class="blog__list-item">
-              <a class="card" href="#!">
-                <div class="card__image">
+              <div class="card card_hash">
+                <a class="card__image" href="#!">
                   <img class="card__image-img" src="static/img/content/loc-slider-1.jpg" alt="image" title="" />
                   <svg class="card__image-svg" viewBox="0 0 300 219" preserveAspectRatio="none">
                     <path d="M-2,-2v223h304V-2H-2z M271.8,169.7c-46.3,39.6-168.4,77.1-231.1,16.5C-22.1,125.6,0.3,79.1,45.9,50C91.6,20.9,179.8-29,242,25.1C304.2,79.2,318.2,130.1,271.8,169.7z"></path>
                   </svg>
+                </a>
+                <h3 class="card__title">
+                  <a href="#!">Как создать чат-бота, который ухудшит ваш бизнес</a>
+                </h3>
+                <div class="card__text">
+                  <p>Согласно Wikipedia, бот – это специальная программа, где выполняющая автоматичеcкие пироги с вишней, приводит пользователя к конечному про автоматичеcкие автоматичеcкие автоматичеcкие</p>
                 </div>
-                <div class="card__title">Как создать чат-бота, который ухудшит ваш бизнес</div>
-                <div class="card__text">Согласно Wikipedia, бот – это специальная программа, где выполняющая автоматичеcкие пироги с вишней, приводит пользователя к конечному про автоматичеcкие автоматичеcкие автоматичеcкие</div>
-                <div class="card__more">
+                <a class="card__more" href="#!">
                   <div class="card__more-dot"></div>
                   <div class="card__more-dot"></div>
                   <div class="card__more-dot"></div>
@@ -390,20 +411,29 @@
                   <div class="card__more-dot"></div>
                   <div class="card__more-dot"></div>
                   <div class="card__more-circle"></div>
+                </a>
+                <div class="card__hash">
+                  <a href="#!">#ТУРИСТИЧЕСКИЕ АГЕНТСТВА </a>
+                  <a href="#!">#ЧАТБОТ</a>
+                  <a href="#!">#БЛАБЛА</a>
                 </div>
-              </a>
+              </div>
             </div>
             <div class="blog__list-item">
-              <a class="card" href="#!">
-                <div class="card__image">
+              <div class="card card_hash">
+                <a class="card__image" href="#!">
                   <img class="card__image-img" src="static/img/content/loc-slider-1.jpg" alt="image" title="" />
                   <svg class="card__image-svg" viewBox="0 0 300 219" preserveAspectRatio="none">
                     <path d="M-2,-2v223h304V-2H-2z M271.8,169.7c-46.3,39.6-168.4,77.1-231.1,16.5C-22.1,125.6,0.3,79.1,45.9,50C91.6,20.9,179.8-29,242,25.1C304.2,79.2,318.2,130.1,271.8,169.7z"></path>
                   </svg>
+                </a>
+                <h3 class="card__title">
+                  <a href="#!">Зачем бизнесу нужен чат-бот?</a>
+                </h3>
+                <div class="card__text">
+                  <p>Согласно Wikipedia, бот – это специальная программа, где выполняющая автоматичеcкие пироги с вишней, приводит пользователя к конечному про автоматичеcкие автоматичеcкие автоматичеcкие</p>
                 </div>
-                <div class="card__title">Зачем бизнесу нужен чат-бот?</div>
-                <div class="card__text">Согласно Wikipedia, бот – это специальная программа, где выполняющая автоматичеcкие пироги с вишней, приводит пользователя к конечному про автоматичеcкие автоматичеcкие автоматичеcкие</div>
-                <div class="card__more">
+                <a class="card__more" href="#!">
                   <div class="card__more-dot"></div>
                   <div class="card__more-dot"></div>
                   <div class="card__more-dot"></div>
@@ -412,20 +442,27 @@
                   <div class="card__more-dot"></div>
                   <div class="card__more-dot"></div>
                   <div class="card__more-circle"></div>
+                </a>
+                <div class="card__hash">
+                  <a href="#!">#СЕРВИСНЫЕ ПРЕДПРИЯТИЯ</a>
                 </div>
-              </a>
+              </div>
             </div>
             <div class="blog__list-item">
-              <a class="card" href="#!">
-                <div class="card__image">
+              <div class="card card_hash">
+                <a class="card__image" href="#!">
                   <img class="card__image-img" src="static/img/content/loc-slider-1.jpg" alt="image" title="" />
                   <svg class="card__image-svg" viewBox="0 0 300 219" preserveAspectRatio="none">
                     <path d="M-2,-2v223h304V-2H-2z M271.8,169.7c-46.3,39.6-168.4,77.1-231.1,16.5C-22.1,125.6,0.3,79.1,45.9,50C91.6,20.9,179.8-29,242,25.1C304.2,79.2,318.2,130.1,271.8,169.7z"></path>
                   </svg>
+                </a>
+                <h3 class="card__title">
+                  <a href="#!">10 причин, по которым чат-боты – это будущее мобильных приложений для смартфонов</a>
+                </h3>
+                <div class="card__text">
+                  <p>Согласно Wikipedia, бот – это специальная программа, где выполняющая автоматичеcкие пироги с вишней, приводит пользователя к конечному про автоматичеcкие автоматичеcкие автоматичеcкие</p>
                 </div>
-                <div class="card__title">10 причин, по которым чат-боты – это будущее мобильных приложений для смартфонов</div>
-                <div class="card__text">Согласно Wikipedia, бот – это специальная программа, где выполняющая автоматичеcкие пироги с вишней, приводит пользователя к конечному про автоматичеcкие автоматичеcкие автоматичеcкие</div>
-                <div class="card__more">
+                <a class="card__more" href="#!">
                   <div class="card__more-dot"></div>
                   <div class="card__more-dot"></div>
                   <div class="card__more-dot"></div>
@@ -434,20 +471,27 @@
                   <div class="card__more-dot"></div>
                   <div class="card__more-dot"></div>
                   <div class="card__more-circle"></div>
+                </a>
+                <div class="card__hash">
+                  <a href="#!">#НОВОСТНЫЕ АГЕНТСТВА</a>
                 </div>
-              </a>
+              </div>
             </div>
             <div class="blog__list-item">
-              <a class="card" href="#!">
-                <div class="card__image">
+              <div class="card card_hash">
+                <a class="card__image" href="#!">
                   <img class="card__image-img" src="static/img/content/loc-slider-1.jpg" alt="image" title="" />
                   <svg class="card__image-svg" viewBox="0 0 300 219" preserveAspectRatio="none">
                     <path d="M-2,-2v223h304V-2H-2z M271.8,169.7c-46.3,39.6-168.4,77.1-231.1,16.5C-22.1,125.6,0.3,79.1,45.9,50C91.6,20.9,179.8-29,242,25.1C304.2,79.2,318.2,130.1,271.8,169.7z"></path>
                   </svg>
+                </a>
+                <h3 class="card__title">
+                  <a href="#!">Как создать чат-бота, который ухудшит ваш бизнес</a>
+                </h3>
+                <div class="card__text">
+                  <p>Согласно Wikipedia, бот – это специальная программа, где выполняющая автоматичеcкие пироги с вишней, приводит пользователя к конечному про автоматичеcкие автоматичеcкие автоматичеcкие</p>
                 </div>
-                <div class="card__title">Как создать чат-бота, который ухудшит ваш бизнес</div>
-                <div class="card__text">Согласно Wikipedia, бот – это специальная программа, где выполняющая автоматичеcкие пироги с вишней, приводит пользователя к конечному про автоматичеcкие автоматичеcкие автоматичеcкие</div>
-                <div class="card__more">
+                <a class="card__more" href="#!">
                   <div class="card__more-dot"></div>
                   <div class="card__more-dot"></div>
                   <div class="card__more-dot"></div>
@@ -456,20 +500,27 @@
                   <div class="card__more-dot"></div>
                   <div class="card__more-dot"></div>
                   <div class="card__more-circle"></div>
+                </a>
+                <div class="card__hash">
+                  <a href="#!">#БАНКИ И ФИНАНСОВЫЕ КОМПАНИИ</a>
                 </div>
-              </a>
+              </div>
             </div>
             <div class="blog__list-item">
-              <a class="card" href="#!">
-                <div class="card__image">
+              <div class="card card_hash">
+                <a class="card__image" href="#!">
                   <img class="card__image-img" src="static/img/content/loc-slider-1.jpg" alt="image" title="" />
                   <svg class="card__image-svg" viewBox="0 0 300 219" preserveAspectRatio="none">
                     <path d="M-2,-2v223h304V-2H-2z M271.8,169.7c-46.3,39.6-168.4,77.1-231.1,16.5C-22.1,125.6,0.3,79.1,45.9,50C91.6,20.9,179.8-29,242,25.1C304.2,79.2,318.2,130.1,271.8,169.7z"></path>
                   </svg>
+                </a>
+                <h3 class="card__title">
+                  <a href="#!">Зачем бизнесу нужен чат-бот?</a>
+                </h3>
+                <div class="card__text">
+                  <p>Согласно Wikipedia, бот – это специальная программа, где выполняющая автоматичеcкие пироги с вишней, приводит пользователя к конечному про автоматичеcкие автоматичеcкие автоматичеcкие</p>
                 </div>
-                <div class="card__title">Зачем бизнесу нужен чат-бот?</div>
-                <div class="card__text">Согласно Wikipedia, бот – это специальная программа, где выполняющая автоматичеcкие пироги с вишней, приводит пользователя к конечному про автоматичеcкие автоматичеcкие автоматичеcкие</div>
-                <div class="card__more">
+                <a class="card__more" href="#!">
                   <div class="card__more-dot"></div>
                   <div class="card__more-dot"></div>
                   <div class="card__more-dot"></div>
@@ -478,9 +529,29 @@
                   <div class="card__more-dot"></div>
                   <div class="card__more-dot"></div>
                   <div class="card__more-circle"></div>
+                </a>
+                <div class="card__hash">
+                  <a href="#!">#НОВОСТНЫЕ АГЕНТСТВА</a>
                 </div>
-              </a>
+              </div>
             </div>
+          </div>
+          <div class="blog__btn-wrap">
+            <a class="btn btn_white" href="#!">
+              <span class="btn__text">Еще статьи</span>
+              <div class="btn__bg">
+                <div class="btn__bg-left">
+                  <div class="btn__bg-left-dot"></div>
+                  <div class="btn__bg-left-dot"></div>
+                  <div class="btn__bg-left-dot"></div>
+                </div>
+                <div class="btn__bg-right">
+                  <div class="btn__bg-right-dot"></div>
+                  <div class="btn__bg-right-dot"></div>
+                  <div class="btn__bg-right-dot"></div>
+                </div>
+              </div>
+            </a>
           </div>
         </div>
       </section>
