--- a/www/article.html
+++ b/www/article.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog page</title>
+    <title>Article page</title>
     <link href="static/css/index.min.css" rel="stylesheet">
     <link rel="icon" href="static/favicon.ico">
   </head>
-  <body class="is-sub">
+  <body class="is-sub is-article">
     <!-- SVG-->
     <div class="svg-container" style="position: absolute; width: 0; height: 0; overflow: hidden;">
       <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -310,7 +310,7 @@
       </div>
     </header>
     <!-- Main content-->
-    <main class="content" data-page="blog">
+    <main class="content" data-page="article">
       <div class="breadcrumbs">
         <div class="breadcrumbs__container container container_md">
           <ul>
@@ -320,238 +320,72 @@
             <li>
               <a href="#!">Блог</a>
             </li>
+            <li>
+              <a href="#!">Для чего нужны боты и как они работают?</a>
+            </li>
           </ul>
         </div>
       </div>
-      <section class="blog">
-        <div class="blog__container container container_md">
-          <h1 class="blog__title">Интересные статьи о ботах</h1>
-          <div class="blog__list">
-            <div class="blog__list-item">
-              <div class="card card_hash card_large">
-                <a class="card__image" href="#!">
-                  <img class="card__image-img" src="static/img/content/loc-slider-1.jpg" alt="image" title="" />
-                  <svg class="card__image-svg" viewBox="0 0 300 219" preserveAspectRatio="none">
-                    <path d="M-2,-2v223h304V-2H-2z M271.8,169.7c-46.3,39.6-168.4,77.1-231.1,16.5C-22.1,125.6,0.3,79.1,45.9,50C91.6,20.9,179.8-29,242,25.1C304.2,79.2,318.2,130.1,271.8,169.7z"></path>
-                  </svg>
-                </a>
-                <h3 class="card__title">
-                  <a href="#!">10 причин, по которым чат-боты – это будущее мобильных приложений для смартфонов</a>
-                </h3>
-                <div class="card__text">
-                  <p>По мере того как все больше организаций попадают в пространство обмена сообщениями, становится очевидным, что понимание объявлений в Facebook Messenger Ads очень важно для получения положительных результатов результатов результатов результатов
-                    результатов</p>
-                </div>
-                <a class="card__more" href="#!">
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-circle"></div>
-                </a>
-                <div class="card__hash">
-                  <a href="#!">#НОВОСТНЫЕ АГЕНТСТВА</a>
-                  <a href="#!">#БОТЫ</a>
-                  <a href="#!">#ПРОСТО АГЕНСТВА</a>
-                </div>
-              </div>
-            </div>
-            <div class="blog__list-item">
-              <div class="card card_hash">
-                <a class="card__image" href="#!">
-                  <img class="card__image-img" src="static/img/content/loc-slider-1.jpg" alt="image" title="" />
-                  <svg class="card__image-svg" viewBox="0 0 300 219" preserveAspectRatio="none">
-                    <path d="M-2,-2v223h304V-2H-2z M271.8,169.7c-46.3,39.6-168.4,77.1-231.1,16.5C-22.1,125.6,0.3,79.1,45.9,50C91.6,20.9,179.8-29,242,25.1C304.2,79.2,318.2,130.1,271.8,169.7z"></path>
-                  </svg>
-                </a>
-                <h3 class="card__title">
-                  <a href="#!">10 причин, по которым чат-боты – это будущее мобильных приложений для смартфонов</a>
-                </h3>
-                <div class="card__text">
-                  <p>Согласно Wikipedia, бот – это специальная программа, где выполняющая автоматичеcкие пироги с вишней, приводит пользователя к конечному про автоматичеcкие автоматичеcкие автоматичеcкие</p>
-                </div>
-                <a class="card__more" href="#!">
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-circle"></div>
-                </a>
-                <div class="card__hash">
-                  <a href="#!">#НОВОСТНЫЕ АГЕНТСТВА</a>
-                </div>
-              </div>
-            </div>
-            <div class="blog__list-item">
-              <div class="card card_hash">
-                <a class="card__image" href="#!">
-                  <img class="card__image-img" src="static/img/content/loc-slider-1.jpg" alt="image" title="" />
-                  <svg class="card__image-svg" viewBox="0 0 300 219" preserveAspectRatio="none">
-                    <path d="M-2,-2v223h304V-2H-2z M271.8,169.7c-46.3,39.6-168.4,77.1-231.1,16.5C-22.1,125.6,0.3,79.1,45.9,50C91.6,20.9,179.8-29,242,25.1C304.2,79.2,318.2,130.1,271.8,169.7z"></path>
-                  </svg>
-                </a>
-                <h3 class="card__title">
-                  <a href="#!">Как создать чат-бота, который ухудшит ваш бизнес</a>
-                </h3>
-                <div class="card__text">
-                  <p>Согласно Wikipedia, бот – это специальная программа, где выполняющая автоматичеcкие пироги с вишней, приводит пользователя к конечному про автоматичеcкие автоматичеcкие автоматичеcкие</p>
-                </div>
-                <a class="card__more" href="#!">
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-circle"></div>
-                </a>
-                <div class="card__hash">
-                  <a href="#!">#ТУРИСТИЧЕСКИЕ АГЕНТСТВА </a>
-                  <a href="#!">#ЧАТБОТ</a>
-                  <a href="#!">#БЛАБЛА</a>
-                </div>
-              </div>
-            </div>
-            <div class="blog__list-item">
-              <div class="card card_hash">
-                <a class="card__image" href="#!">
-                  <img class="card__image-img" src="static/img/content/loc-slider-1.jpg" alt="image" title="" />
-                  <svg class="card__image-svg" viewBox="0 0 300 219" preserveAspectRatio="none">
-                    <path d="M-2,-2v223h304V-2H-2z M271.8,169.7c-46.3,39.6-168.4,77.1-231.1,16.5C-22.1,125.6,0.3,79.1,45.9,50C91.6,20.9,179.8-29,242,25.1C304.2,79.2,318.2,130.1,271.8,169.7z"></path>
-                  </svg>
-                </a>
-                <h3 class="card__title">
-                  <a href="#!">Зачем бизнесу нужен чат-бот?</a>
-                </h3>
-                <div class="card__text">
-                  <p>Согласно Wikipedia, бот – это специальная программа, где выполняющая автоматичеcкие пироги с вишней, приводит пользователя к конечному про автоматичеcкие автоматичеcкие автоматичеcкие</p>
-                </div>
-                <a class="card__more" href="#!">
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-circle"></div>
-                </a>
-                <div class="card__hash">
-                  <a href="#!">#СЕРВИСНЫЕ ПРЕДПРИЯТИЯ</a>
-                </div>
-              </div>
-            </div>
-            <div class="blog__list-item">
-              <div class="card card_hash">
-                <a class="card__image" href="#!">
-                  <img class="card__image-img" src="static/img/content/loc-slider-1.jpg" alt="image" title="" />
-                  <svg class="card__image-svg" viewBox="0 0 300 219" preserveAspectRatio="none">
-                    <path d="M-2,-2v223h304V-2H-2z M271.8,169.7c-46.3,39.6-168.4,77.1-231.1,16.5C-22.1,125.6,0.3,79.1,45.9,50C91.6,20.9,179.8-29,242,25.1C304.2,79.2,318.2,130.1,271.8,169.7z"></path>
-                  </svg>
-                </a>
-                <h3 class="card__title">
-                  <a href="#!">10 причин, по которым чат-боты – это будущее мобильных приложений для смартфонов</a>
-                </h3>
-                <div class="card__text">
-                  <p>Согласно Wikipedia, бот – это специальная программа, где выполняющая автоматичеcкие пироги с вишней, приводит пользователя к конечному про автоматичеcкие автоматичеcкие автоматичеcкие</p>
-                </div>
-                <a class="card__more" href="#!">
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-circle"></div>
-                </a>
-                <div class="card__hash">
-                  <a href="#!">#НОВОСТНЫЕ АГЕНТСТВА</a>
-                </div>
-              </div>
-            </div>
-            <div class="blog__list-item">
-              <div class="card card_hash">
-                <a class="card__image" href="#!">
-                  <img class="card__image-img" src="static/img/content/loc-slider-1.jpg" alt="image" title="" />
-                  <svg class="card__image-svg" viewBox="0 0 300 219" preserveAspectRatio="none">
-                    <path d="M-2,-2v223h304V-2H-2z M271.8,169.7c-46.3,39.6-168.4,77.1-231.1,16.5C-22.1,125.6,0.3,79.1,45.9,50C91.6,20.9,179.8-29,242,25.1C304.2,79.2,318.2,130.1,271.8,169.7z"></path>
-                  </svg>
-                </a>
-                <h3 class="card__title">
-                  <a href="#!">Как создать чат-бота, который ухудшит ваш бизнес</a>
-                </h3>
-                <div class="card__text">
-                  <p>Согласно Wikipedia, бот – это специальная программа, где выполняющая автоматичеcкие пироги с вишней, приводит пользователя к конечному про автоматичеcкие автоматичеcкие автоматичеcкие</p>
-                </div>
-                <a class="card__more" href="#!">
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-circle"></div>
-                </a>
-                <div class="card__hash">
-                  <a href="#!">#БАНКИ И ФИНАНСОВЫЕ КОМПАНИИ</a>
-                </div>
-              </div>
-            </div>
-            <div class="blog__list-item">
-              <div class="card card_hash">
-                <a class="card__image" href="#!">
-                  <img class="card__image-img" src="static/img/content/loc-slider-1.jpg" alt="image" title="" />
-                  <svg class="card__image-svg" viewBox="0 0 300 219" preserveAspectRatio="none">
-                    <path d="M-2,-2v223h304V-2H-2z M271.8,169.7c-46.3,39.6-168.4,77.1-231.1,16.5C-22.1,125.6,0.3,79.1,45.9,50C91.6,20.9,179.8-29,242,25.1C304.2,79.2,318.2,130.1,271.8,169.7z"></path>
-                  </svg>
-                </a>
-                <h3 class="card__title">
-                  <a href="#!">Зачем бизнесу нужен чат-бот?</a>
-                </h3>
-                <div class="card__text">
-                  <p>Согласно Wikipedia, бот – это специальная программа, где выполняющая автоматичеcкие пироги с вишней, приводит пользователя к конечному про автоматичеcкие автоматичеcкие автоматичеcкие</p>
-                </div>
-                <a class="card__more" href="#!">
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-dot"></div>
-                  <div class="card__more-circle"></div>
-                </a>
-                <div class="card__hash">
-                  <a href="#!">#НОВОСТНЫЕ АГЕНТСТВА</a>
-                </div>
-              </div>
-            </div>
+      <section class="article-header">
+        <div class="article-header__bg">
+          <img src="static/img/content/bg-article.jpg" alt="image">
+          <div class="article-header__bg-mask">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1280 537">
+              <g>
+                <path d="M0,536.5h253C104.1,536.5,0,530,0,530V536.5z" />
+                <path d="M253,536.5h1027V410c0,0-319.8,80-639.8,110C502.7,532.9,365.1,536.5,253,536.5z" /> </g>
+            </svg>
           </div>
-          <div class="blog__btn-wrap">
-            <a class="btn btn_white" href="#!">
-              <span class="btn__text">Еще статьи</span>
-              <div class="btn__bg">
-                <div class="btn__bg-left">
-                  <div class="btn__bg-left-dot"></div>
-                  <div class="btn__bg-left-dot"></div>
-                  <div class="btn__bg-left-dot"></div>
-                </div>
-                <div class="btn__bg-right">
-                  <div class="btn__bg-right-dot"></div>
-                  <div class="btn__bg-right-dot"></div>
-                  <div class="btn__bg-right-dot"></div>
-                </div>
+        </div>
+        <div class="article-header__container container container_md">
+          <h1 class="article-header__title">Для чего нужны боты и как они работают?</h1>
+          <p>Согласно Wikipedia, бот – это специальная программа, выполняющая автоматически и/или по заданному расписанию какие-либо действия через тот же интерфейс, что и обычный пользователь.</p>
+        </div>
+      </section>
+      <section class="article-content">
+        <div class="article-content__container container container_md">
+          <div class="article">
+            <p>Проще говоря, это робот, который умеет отвечать на определенные запросы и выполнять предусмотренные для него действия.</p>
+            <p>Начало массовому использованию ботов в сервисах обмена мгновенными сообщениями положил мессенджер Telegram, создатели которого представили собственную платформу для ботов в 2015 году и открыли доступ к API.</p>
+            <p>Так, постепенно, рядом с обычными пользователями Telegram стали появляться аккаунты роботов. Они расширяют диапазон возможностей мессенджера, экономят время пользователя и ресурсы мобильного устройства.</p>
+            <p>Боты ищут по запросу информацию, автоматизируют и упрощают определенные действия, уведомляют о публикациях в соцсетях, предоставляют услуги различных компаний и в конце концов просто развлекают.</p>
+            <p>Возможности у ботов – индивидуальные.</p>
+            <ul>
+              <li>
+                <b>@telerobot_bot</b> помогает перевести интерфейс
+                <a href='#!' target='_blank'>Telegram</a> на русский или украинский языки</li>
+              <li>
+                <b>@ImageSearchBot</b> ищет изображения по запросу</li>
+              <li>
+                <b>@weatherman_bot</b> показывает погоду в вашем городе</li>
+              <li>
+                <b>@Instasave_bot</b> сохраняет фото с Instagram и видео c
+                <b>YouTube</b>, а
+                <b>@tap2bot</b> и вовсе многофункциональный бот, умеющий и фильм на вечер подобрать и билеты на самолет найти.</li>
+            </ul>
+            <div class="article__image">
+              <img src="static/img/content/loc-slider-1.jpg" alt="image">
+              <div class="article__image-mask">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 626 508" preserveAspectRatio='none'>
+                  <path d="M0,0v508h626V0H0z M625.8,218.6c-4.6,109.2-1,285.6-221,289.2c-220,3.6-384.4-31.1-402.8-157.5C-16.3,223.9,87.8-5.7,323.4,0.1C559.1,5.9,630.4,109.3,625.8,218.6z" /> </svg>
               </div>
-            </a>
+            </div>
+            <p>Боты ищут по запросу информацию, автоматизируют и упрощают определенные действия, уведомляют о публикациях в соцсетях, предоставляют услуги различных компаний и в конце концов просто развлекают.</p>
+            <p>Возможности у ботов – индивидуальные.</p>
+            <ol>
+              <li>
+                <b>@telerobot_bot</b> помогает перевести интерфейс
+                <a href='#!' target='_blank'>Telegram</a> на русский или украинский языки</li>
+              <li>
+                <b>@ImageSearchBot</b> ищет изображения по запросу</li>
+              <li>
+                <b>@weatherman_bot</b> показывает погоду в вашем городе</li>
+              <li>
+                <b>@Instasave_bot</b> сохраняет фото с Instagram и видео c
+                <b>YouTube</b>, а
+                <b>@tap2bot</b> и вовсе многофункциональный бот, умеющий и фильм на вечер подобрать и билеты на самолет найти.</li>
+            </ol>
+            <blockquote>Согласно Wikipedia, бот – это специальная программа, выполняющая автоматически и/или по заданному расписанию какие-либо действия через тот же интерфейс, что и обычный пользователь.</blockquote>
           </div>
         </div>
       </section>
