--- a/www/index.html
+++ b/www/index.html
@@ -125,8 +125,9 @@
     var pager = [
       ['home.html', '01', 'Home', 'Home page'],
       ['404.html', '02', '404', '404 page'],
-      ['contacts.html', '02', 'Contacts', 'Contacts page'],
-      ['blog.html', '02', 'Blog', 'Blog page']
+      ['contacts.html', '03', 'Contacts', 'Contacts page'],
+      ['blog.html', '04', 'Blog', 'Blog page'],
+      ['article.html', '05', 'Article', 'Article page']
     ];
   </script>
   <header>
