--- a/www/contacts.html
+++ b/www/contacts.html
@@ -401,7 +401,7 @@
       </section>
     </main>
     <!-- Footer-->
-    <footer class="footer footer_contacts" id="footer" data-scroll-section="data-scroll-section">
+    <footer class="footer footer_contacts" id="footer">
       <div class="footer__mobile-top js-to-top">
         <svg class="icon icon-mobile-top">
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-mobile-top"></use>
