PROD (title fix)

--- a/www/home.html
+++ b/www/home.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home page</title>
-    <link href="static/css/index.min.css" rel="stylesheet">
+    <link href="static/css/index.css" rel="stylesheet">
     <link rel="icon" href="static/favicon.ico">
   </head>
   <body>
@@ -291,6 +291,9 @@
                   <li>
                     <a href="#!">EN</a>
                   </li>
+                  <li>
+                    <a href="#!">UA</a>
+                  </li>
                 </ul>
               </li>
             </ul>
@@ -428,7 +431,8 @@
             <div class="chat__data-bot">
               <div data-bot="0">
                 <p>Привет, Человек!</p>
-                <p>Меня зовут Unibot и я тот, кто больше расскажет тебе о крутых возможностях чатботов!</p>
+                <p>Меня зовут
+                  <a href='home.html'>Unibot</a> и я тот, кто больше расскажет тебе о крутых возможностях чатботов!</p>
                 <p>Ну, что ж, начнем с простого. Как дела?</p>
               </div>
               <div data-bot="1">
@@ -1084,6 +1088,6 @@
       </div>
     </div>
     <!-- Scripts-->
-    <script src="static/js/index.min.js"></script>
+    <script src="static/js/index.js"></script>
   </body>
 </html>
