--- a/www/article.html
+++ b/www/article.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Article page</title>
-    <link href="static/css/index.min.css" rel="stylesheet">
+    <link href="static/css/index.css" rel="stylesheet">
     <link rel="icon" href="static/favicon.ico">
   </head>
   <body class="is-sub is-article">
@@ -291,6 +291,9 @@
                   <li>
                     <a href="#!">EN</a>
                   </li>
+                  <li>
+                    <a href="#!">UA</a>
+                  </li>
                 </ul>
               </li>
             </ul>
@@ -438,6 +441,6 @@
       </div>
     </footer>
     <!-- Scripts-->
-    <script src="static/js/index.min.js"></script>
+    <script src="static/js/index.js"></script>
   </body>
 </html>
