--- a/www/article.html
+++ b/www/article.html
@@ -206,6 +206,16 @@
           <path class="st1" d="M164.7 311.1l-82.6-41.3c-2.3-1.1-2.3-4.4 0-5.5l313.7-162.2c2.3-1.2 5 .8 4.5 3.4l-54 270c-.4 1.9-2.4 3-4.3 2.2l-73.4-31.5c-.9-.4-1.9-.3-2.7.1L171 399.1c-2.1 1.1-4.6-.3-4.6-2.7v-82.5c0-1.2-.7-2.2-1.7-2.8z" />
           <path class="st2" d="M200.3 339l-.5-82.4c0-.5.3-1 .7-1.3l133.9-81.8c1.5-.9 3.1 1.1 1.9 2.3L234.4 278.4c-.1.1-.2.2-.3.4l-17.4 34.9-13.5 26c-.8 1.3-2.9.8-2.9-.7z" />
         </symbol>
+        <symbol id="icon-twitter" viewBox="0 0 291.3 291.3">
+          <style>
+            .st1 {
+              fill: #fff
+            }
+          </style>
+          <path d="M145.7 0c80.4 0 145.7 65.2 145.7 145.7 0 80.4-65.2 145.7-145.7 145.7S0 226.1 0 145.7C0 65.2 65.2 0 145.7 0z" />
+          <path class="st1" d="M236.7 98.1c-6.4 2.7-13.2 4.6-20.4 5.4 7.3-4.3 13-11 15.6-19.1-6.9 4-14.5 6.8-22.6 8.4-6.5-6.7-15.7-10.9-25.9-10.9-19.6 0-35.5 15.4-35.5 34.4 0 2.7.3 5.3.9 7.9-29.5-1.4-55.7-15.2-73.2-36-3.1 5.1-4.8 11-4.8 17.3 0 11.9 6.3 22.5 15.8 28.7-5.8-.2-11.3-1.7-16.1-4.3v.4c0 16.7 12.2 30.6 28.5 33.8-3 .8-6.1 1.2-9.3 1.2-2.3 0-4.5-.2-6.7-.6 4.5 13.7 17.6 23.7 33.2 23.9-12.2 9.2-27.5 14.7-44.1 14.7-2.9 0-5.7-.2-8.5-.5 15.7 9.8 34.4 15.5 54.4 15.5 65.3 0 101-52.5 101-98V116c6.9-4.9 13-11 17.7-17.9z"
+          />
+        </symbol>
         <symbol id="icon-viber" viewBox="0 0 512 512">
           <style>
             .st0 {
@@ -368,10 +378,7 @@
             </ul>
             <div class="article__image">
               <img src="static/img/content/loc-slider-1.jpg" alt="image">
-              <div class="article__image-mask">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 626 508" preserveAspectRatio='none'>
-                  <path d="M0,0v508h626V0H0z M625.8,218.6c-4.6,109.2-1,285.6-221,289.2c-220,3.6-384.4-31.1-402.8-157.5C-16.3,223.9,87.8-5.7,323.4,0.1C559.1,5.9,630.4,109.3,625.8,218.6z" /> </svg>
-              </div>
+              <div class="article__image-mask"></div>
             </div>
             <p>Боты ищут по запросу информацию, автоматизируют и упрощают определенные действия, уведомляют о публикациях в соцсетях, предоставляют услуги различных компаний и в конце концов просто развлекают.</p>
             <p>Возможности у ботов – индивидуальные.</p>
@@ -389,6 +396,34 @@
                 <b>@tap2bot</b> и вовсе многофункциональный бот, умеющий и фильм на вечер подобрать и билеты на самолет найти.</li>
             </ol>
             <blockquote>Согласно Wikipedia, бот – это специальная программа, выполняющая автоматически и/или по заданному расписанию какие-либо действия через тот же интерфейс, что и обычный пользователь.</blockquote>
+          </div>
+          <div class="article-content__share">
+            <div class="article-content__share-in">
+              <p class="article-content__share-text">Поделитья статьей</p>
+              <div class="article-content__share-soc">
+                <div class="article-content__share-soc-icon-wrap">
+                  <a class="soc-icon soc-icon_default article-content__share-soc-icon" href="#!">
+                    <svg class="icon icon-fb">
+                      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-fb"></use>
+                    </svg>
+                  </a>
+                </div>
+                <div class="article-content__share-soc-icon-wrap">
+                  <a class="soc-icon soc-icon_default article-content__share-soc-icon" href="#!">
+                    <svg class="icon icon-twitter">
+                      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </div>
+                <div class="article-content__share-soc-icon-wrap">
+                  <a class="soc-icon soc-icon_default article-content__share-soc-icon" href="#!">
+                    <svg class="icon icon-telegram">
+                      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-telegram"></use>
+                    </svg>
+                  </a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
