PROD (fix + article hash)

--- a/www/article.html
+++ b/www/article.html
@@ -397,6 +397,13 @@
             </ol>
             <blockquote>Согласно Wikipedia, бот – это специальная программа, выполняющая автоматически и/или по заданному расписанию какие-либо действия через тот же интерфейс, что и обычный пользователь.</blockquote>
           </div>
+          <div class="article-content__hash">
+            <a href="#!">#Новостные агенства</a>
+            <a href="#!">#Боты</a>
+            <a href="#!">#Просто агенства</a>
+            <a href="#!">#Просто агенства</a>
+            <a href="#!">#Просто агенства</a>
+          </div>
           <div class="article-content__share">
             <div class="article-content__share-in">
               <p class="article-content__share-text">Поделитья статьей</p>
