--- a/www/home.html
+++ b/www/home.html
@@ -463,6 +463,10 @@
               </div>
             </div>
             <div class="chat__data-btn">
+              <div data-btn="rejected">
+                <p data-btn-event-target="0">Начало</p>
+                <p data-btn-event-target="last">Почту</p>
+              </div>
               <div data-btn="0">
                 <p data-btn-event-target="1">Лучше не бывает!</p>
                 <p data-btn-event-target="2">Бывало и лучше ...</p>
@@ -958,17 +962,6 @@
         <div class="footer__title">Контакты</div>
         <div class="footer__list">
           <div class="footer__list-col">
-            <div class="footer__list-address footer__list-text">
-              <p>05624, Украина, Киев</p>
-              <p>ул. Ярославская, 56</p>
-            </div>
-            <div class="footer__list-time footer__list-text">
-              <p>Пн-Пт: 9:00-18:00</p>
-              <p>Сб: 9:00-14:00</p>
-              <p>Вс: выходной</p>
-            </div>
-          </div>
-          <div class="footer__list-col">
             <div class="footer__list-phone footer__list-text">
               <p>Телефон:</p>
               <a href="tel: +380999318500">+38 (099)-931-85-00</a>
@@ -979,6 +972,10 @@
             </div>
           </div>
           <div class="footer__list-col">
+            <div class="footer__list-address footer__list-text">
+              <p>05624, Украина, Киев</p>
+              <p>ул. Ярославская, 56</p>
+            </div>
             <div class="footer__list-soc-text footer__list-text">
               <p>Мы в</p>
               <p>социальных сетях:</p>
