--- a/www/contacts.html
+++ b/www/contacts.html
@@ -507,6 +507,10 @@
           </div>
         </div>
         <p class="footer__copy">Copyright 2018 Unibot. All rights reserved.</p>
+        <div class="footer__load">
+          <a class="footer__load-link" href="#!">Terms</a>
+          <a class="footer__load-link" href="#!">Privesy</a>
+        </div>
       </div>
     </footer>
     <!-- Scripts-->
