--- a/www/home.html
+++ b/www/home.html
@@ -1036,6 +1036,10 @@
           </div>
         </div>
         <p class="footer__copy">Copyright 2018 Unibot. All rights reserved.</p>
+        <div class="footer__load">
+          <a class="footer__load-link" href="#!">Terms</a>
+          <a class="footer__load-link" href="#!">Privesy</a>
+        </div>
       </div>
     </footer>
     <div class="modal modalit" id="orderBot" aria-hidden="true">
