--- a/www/home.html
+++ b/www/home.html
@@ -123,6 +123,20 @@
             <path class="st1" d="M255.5 169.8c-48 0-87 39-87 87s39 87 87 87 87-39 87-87-39-87-87-87zm0 140.2c-29.4 0-53.2-23.8-53.2-53.2s23.8-53.2 53.2-53.2 53.2 23.8 53.2 53.2c0 29.4-23.8 53.2-53.2 53.2z" />
           </g>
         </symbol>
+        <symbol id="icon-linkedin" viewBox="0 0 291.3 291.3">
+          <style>
+            .st0 {
+              fill: #db285e
+            }
+
+            .st1 {
+              fill: #fff
+            }
+          </style>
+          <path class="st0" d="M145.7 0c80.4 0 145.7 65.2 145.7 145.7s-65.2 145.7-145.7 145.7S0 226.1 0 145.7 65.2 0 145.7 0z" />
+          <path class="st1" d="M82.1 200.1h27.3v-90.9H82.1v90.9zm106.2-94c-13.2 0-25.1 4.8-33.5 15.5v-12.7h-27.4v91.2h27.4v-49.3c0-10.4 9.6-20.6 21.5-20.6s14.9 10.2 14.9 20.3v49.6h27.3v-51.6c.1-35.8-16.9-42.4-30.2-42.4zm-92.7-6c7.5 0 13.7-6.1 13.7-13.7s-6.1-13.7-13.7-13.7-13.7 6.1-13.7 13.7 6.2 13.7 13.7 13.7z"
+          />
+        </symbol>
         <symbol id="icon-menu-close" viewBox="0 0 20 20">
           <path fill-rule="evenodd" d="M18.485 4.343a2 2 0 1 1-2.828-2.828 2 2 0 0 1 2.828 2.828zm-9.899 7.071a2 2 0 1 1 2.828-2.828 2 2 0 0 1-2.828 2.828zm-7.071 7.071a2 2 0 1 1 2.828-2.828 2 2 0 0 1-2.828 2.828z" />
           <path fill-rule="evenodd" d="M18.485 18.485a2 2 0 1 1-2.828-2.828 2 2 0 0 1 2.828 2.828zm-9.899-7.071a2 2 0 1 1 2.828-2.828 2 2 0 0 1-2.828 2.828zM1.515 4.343a2 2 0 1 1 2.828-2.828 2 2 0 0 1-2.828 2.828z" />
@@ -205,6 +219,16 @@
           <circle cx="256" cy="256" r="256" />
           <path class="st1" d="M164.7 311.1l-82.6-41.3c-2.3-1.1-2.3-4.4 0-5.5l313.7-162.2c2.3-1.2 5 .8 4.5 3.4l-54 270c-.4 1.9-2.4 3-4.3 2.2l-73.4-31.5c-.9-.4-1.9-.3-2.7.1L171 399.1c-2.1 1.1-4.6-.3-4.6-2.7v-82.5c0-1.2-.7-2.2-1.7-2.8z" />
           <path class="st2" d="M200.3 339l-.5-82.4c0-.5.3-1 .7-1.3l133.9-81.8c1.5-.9 3.1 1.1 1.9 2.3L234.4 278.4c-.1.1-.2.2-.3.4l-17.4 34.9-13.5 26c-.8 1.3-2.9.8-2.9-.7z" />
+        </symbol>
+        <symbol id="icon-twitter-pink" viewBox="0 0 291.3 291.3">
+          <style>
+            .st1 {
+              fill: #fff
+            }
+          </style>
+          <path d="M145.7 0c80.4 0 145.7 65.2 145.7 145.7 0 80.4-65.2 145.7-145.7 145.7S0 226.1 0 145.7C0 65.2 65.2 0 145.7 0z" />
+          <path class="st1" d="M236.7 98.1c-6.4 2.7-13.2 4.6-20.4 5.4 7.3-4.3 13-11 15.6-19.1-6.9 4-14.5 6.8-22.6 8.4-6.5-6.7-15.7-10.9-25.9-10.9-19.6 0-35.5 15.4-35.5 34.4 0 2.7.3 5.3.9 7.9-29.5-1.4-55.7-15.2-73.2-36-3.1 5.1-4.8 11-4.8 17.3 0 11.9 6.3 22.5 15.8 28.7-5.8-.2-11.3-1.7-16.1-4.3v.4c0 16.7 12.2 30.6 28.5 33.8-3 .8-6.1 1.2-9.3 1.2-2.3 0-4.5-.2-6.7-.6 4.5 13.7 17.6 23.7 33.2 23.9-12.2 9.2-27.5 14.7-44.1 14.7-2.9 0-5.7-.2-8.5-.5 15.7 9.8 34.4 15.5 54.4 15.5 65.3 0 101-52.5 101-98V116c6.9-4.9 13-11 17.7-17.9z"
+          />
         </symbol>
         <symbol id="icon-twitter" viewBox="0 0 291.3 291.3">
           <style>
@@ -464,7 +488,7 @@
             </div>
             <div class="chat__data-btn">
               <div data-btn="rejected">
-                <p data-btn-event-target="0">Начало</p>
+                <p>Начало</p>
                 <p data-btn-event-target="last">Почту</p>
               </div>
               <div data-btn="0">
@@ -940,7 +964,112 @@
           </div>
         </div>
       </section>
-      <!--include home/top-->
+      <section class="top" id="top" data-scroll-section="data-scroll-section">
+        <div class="top__container container">
+          <h2 class="top__title" data-text-mobile="Статьи о ботах">Интересные статьи о ботах</h2>
+          <div class="top__list-counter">
+            <div class="top__list-counter-current"></div>
+            <div class="top__list-counter-total"></div>
+          </div>
+          <div class="top__list">
+            <div class="top__list-item">
+              <div class="card">
+                <a class="card__image" href="#!">
+                  <img class="card__image-img" src="static/img/content/loc-slider-1.jpg" alt="image" title="" />
+                  <svg class="card__image-svg" viewBox="0 0 300 219" preserveAspectRatio="none">
+                    <path d="M-2,-2v223h304V-2H-2z M271.8,169.7c-46.3,39.6-168.4,77.1-231.1,16.5C-22.1,125.6,0.3,79.1,45.9,50C91.6,20.9,179.8-29,242,25.1C304.2,79.2,318.2,130.1,271.8,169.7z"></path>
+                  </svg>
+                </a>
+                <div class="card__title">
+                  <a href="#!">10 причин, по которым чат-боты – это будущее мобильных приложений для смартфонов</a>
+                </div>
+                <div class="card__text">
+                  <p>Согласно Wikipedia, бот – это специальная программа, где выполняющая автоматичеcкие пироги с вишней, приводит пользователя к конечному про выполняющая автоматичеcкие пироги с вишнейвыполняющая автоматичеcкие пироги с вишней</p>
+                </div>
+                <a class="card__more" href="#!">
+                  <div class="card__more-dot"></div>
+                  <div class="card__more-dot"></div>
+                  <div class="card__more-dot"></div>
+                  <div class="card__more-dot"></div>
+                  <div class="card__more-dot"></div>
+                  <div class="card__more-dot"></div>
+                  <div class="card__more-dot"></div>
+                  <div class="card__more-circle"></div>
+                </a>
+              </div>
+            </div>
+            <div class="top__list-item">
+              <div class="card">
+                <a class="card__image" href="#!">
+                  <img class="card__image-img" src="static/img/content/loc-slider-2.jpg" alt="image" title="" />
+                  <svg class="card__image-svg" viewBox="0 0 300 219" preserveAspectRatio="none">
+                    <path d="M-2,-2v223h304V-2H-2z M271.8,169.7c-46.3,39.6-168.4,77.1-231.1,16.5C-22.1,125.6,0.3,79.1,45.9,50C91.6,20.9,179.8-29,242,25.1C304.2,79.2,318.2,130.1,271.8,169.7z"></path>
+                  </svg>
+                </a>
+                <div class="card__title">
+                  <a href="#!">Как создать чат-бота, который ухудшит ваш бизнес</a>
+                </div>
+                <div class="card__text">
+                  <p>Согласно Wikipedia, бот – это специальная программа, где выполняющая автоматичеcкие пироги с вишней, приводит пользователя к конечному про выполняющая автоматичеcкие пироги с вишнейвыполняющая автоматичеcкие пироги с вишней</p>
+                </div>
+                <a class="card__more" href="#!">
+                  <div class="card__more-dot"></div>
+                  <div class="card__more-dot"></div>
+                  <div class="card__more-dot"></div>
+                  <div class="card__more-dot"></div>
+                  <div class="card__more-dot"></div>
+                  <div class="card__more-dot"></div>
+                  <div class="card__more-dot"></div>
+                  <div class="card__more-circle"></div>
+                </a>
+              </div>
+            </div>
+            <div class="top__list-item">
+              <div class="card">
+                <a class="card__image" href="#!">
+                  <img class="card__image-img" src="static/img/content/loc-slider-3.jpg" alt="image" title="" />
+                  <svg class="card__image-svg" viewBox="0 0 300 219" preserveAspectRatio="none">
+                    <path d="M-2,-2v223h304V-2H-2z M271.8,169.7c-46.3,39.6-168.4,77.1-231.1,16.5C-22.1,125.6,0.3,79.1,45.9,50C91.6,20.9,179.8-29,242,25.1C304.2,79.2,318.2,130.1,271.8,169.7z"></path>
+                  </svg>
+                </a>
+                <div class="card__title">
+                  <a href="#!">Зачем бизнесу нужен чат-бот?</a>
+                </div>
+                <div class="card__text">
+                  <p>Согласно Wikipedia, бот – это специальная программа, где выполняющая автоматичеcкие пироги с вишней, приводит пользователя к конечному про выполняющая автоматичеcкие пироги с вишнейвыполняющая автоматичеcкие пироги с вишней</p>
+                </div>
+                <a class="card__more" href="#!">
+                  <div class="card__more-dot"></div>
+                  <div class="card__more-dot"></div>
+                  <div class="card__more-dot"></div>
+                  <div class="card__more-dot"></div>
+                  <div class="card__more-dot"></div>
+                  <div class="card__more-dot"></div>
+                  <div class="card__more-dot"></div>
+                  <div class="card__more-circle"></div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="top__btn-wrap">
+            <a class="btn btn_white" href="#!" data-target="#orderBot">
+              <span class="btn__text">Все статьи</span>
+              <div class="btn__bg">
+                <div class="btn__bg-left">
+                  <div class="btn__bg-left-dot"></div>
+                  <div class="btn__bg-left-dot"></div>
+                  <div class="btn__bg-left-dot"></div>
+                </div>
+                <div class="btn__bg-right">
+                  <div class="btn__bg-right-dot"></div>
+                  <div class="btn__bg-right-dot"></div>
+                  <div class="btn__bg-right-dot"></div>
+                </div>
+              </div>
+            </a>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- Footer-->
     <footer class="footer" id="footer" data-scroll-section="data-scroll-section">
@@ -983,13 +1112,6 @@
             <div class="footer__list-soc footer__list-text">
               <div class="footer__list-soc-icon-wrap">
                 <a class="soc-icon soc-icon_default footer__list-soc-icon" href="#!">
-                  <svg class="icon icon-telegram">
-                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-telegram"></use>
-                  </svg>
-                </a>
-              </div>
-              <div class="footer__list-soc-icon-wrap">
-                <a class="soc-icon soc-icon_default footer__list-soc-icon" href="#!">
                   <svg class="icon icon-fb">
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-fb"></use>
                   </svg>
@@ -997,8 +1119,15 @@
               </div>
               <div class="footer__list-soc-icon-wrap">
                 <a class="soc-icon soc-icon_default footer__list-soc-icon" href="#!">
-                  <svg class="icon icon-insta">
-                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-insta"></use>
+                  <svg class="icon icon-linkedin">
+                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </div>
+              <div class="footer__list-soc-icon-wrap">
+                <a class="soc-icon soc-icon_default footer__list-soc-icon" href="#!">
+                  <svg class="icon icon-twitter-pink">
+                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-twitter-pink"></use>
                   </svg>
                 </a>
               </div>
