--- a/www/home.html
+++ b/www/home.html
@@ -485,10 +485,13 @@
               <div data-bot="rejected">
                 <p>Это не почта, бро!</p>
               </div>
+              <div data-bot="stop">
+                <p>lol stop it please</p>
+              </div>
             </div>
             <div class="chat__data-btn">
               <div data-btn="rejected">
-                <p>Начало</p>
+                <p data-btn-event-target="stop">Начало</p>
                 <p data-btn-event-target="last">Почту</p>
               </div>
               <div data-btn="0">
