--- a/www/article.html
+++ b/www/article.html
@@ -366,13 +366,7 @@
       <section class="article-header">
         <div class="article-header__bg">
           <img src="static/img/content/bg-article.jpg" alt="image">
-          <div class="article-header__bg-mask">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1280 537">
-              <g>
-                <path d="M0,536.5h253C104.1,536.5,0,530,0,530V536.5z" />
-                <path d="M253,536.5h1027V410c0,0-319.8,80-639.8,110C502.7,532.9,365.1,536.5,253,536.5z" /> </g>
-            </svg>
-          </div>
+          <div class="article-header__bg-mask"></div>
         </div>
         <div class="article-header__container container container_md">
           <h1 class="article-header__title">Для чего нужны боты и как они работают?</h1>
